Bug 934783 - Fix GPU memory reporter for win7 and reenable. r=njn